Fix [RS-833] - Ajout d'une nav autour des vignettes - Ajout d'un title sur le bouton - Suppression d'une classe inutile sur img

--- a/docs/_includes/carrousel/carrousel-photos.html
+++ b/docs/_includes/carrousel/carrousel-photos.html
@@ -7,7 +7,7 @@
 
     <div class="swiper-container ds44-swiper-diaporama">
 
-        <button class="ds44-btnIco ds44-btnIco--carre ds44-bgDark ds44-btn-playpause" type="button">
+        <button class="ds44-btnIco ds44-btnIco--carre ds44-bgDark ds44-btn-playpause" type="button" title="Arréter l'animation [nom de l'animation]">
             <i class="icon icon-pause" aria-hidden="true"></i>
             <span class="visually-hidden">Arrêter l'animation</span>
         </button>
@@ -29,7 +29,7 @@
         
     </div>
 
-    <div class="ds44-vignette-container">
+    <nav class="ds44-vignette-container">
 
         <ul class="ds44-list ds44-swiper-imgList-container">
             <li class="ds44-vignette_item">
@@ -54,6 +54,6 @@
             </li>
         </ul>
 
-    </div>
+    </nav>
     
 </div>
