--- a/docs/_includes/carrousel/diaporama/diaporama-vignette.html
+++ b/docs/_includes/carrousel/diaporama/diaporama-vignette.html
@@ -5,7 +5,7 @@
 <div class="ds44-diapoContainer">
     <figure role="figure" aria-label="{{ include.title }} - {{ include.legend }}">
         <div class="ds44-diapoContainer__img">
-            <img src="{{ imageSrc }}" alt="" class="" />
+            <img src="{{ imageSrc }}" alt="" />
         </div>
         <figcaption class="ds44-diaporamaCaption">{{ include.title }}<br />{{ include.legend }}</figcaption>
     </figure>
