RS-833 - Diaporama photo

--- a/docs/_includes/carrousel/diaporama/diaporama-vignette.html
+++ b/docs/_includes/carrousel/diaporama/diaporama-vignette.html
@@ -1,12 +1,6 @@
-{% if include.imageSrc %}
-    {% assign imageSrc = include.imageSrc %}
-{% endif %}
-
-<div class="ds44-diapoContainer">
-    <figure role="figure" aria-label="{{ include.title }} - {{ include.legend }}">
-        <div class="ds44-diapoContainer__img">
-            <img src="{{ imageSrc }}" alt="" />
-        </div>
-        <figcaption class="ds44-diaporamaCaption">{{ include.title }}<br />{{ include.legend }}</figcaption>
+<div class="ds44-diaporama-vignette">
+    <figure class="ds44-diaporama-vignette-container" role="figure" aria-label="{{ include.title }} - {{ include.legend }}">
+        <img class="ds44-diaporama-vignette-image" src="{{ include.imageSrc }}" alt="{{ include.title }} - {{ include.legend }}" />
+        <figcaption class="ds44-diaporama-vignette-text">{{ include.title }}<br />{{ include.legend }}</figcaption>
     </figure>
 </div>
