--- a/docs/_includes/carrousel/carrousel-photos.html
+++ b/docs/_includes/carrousel/carrousel-photos.html
@@ -1,59 +1,70 @@
-<div class="mod--hidden ds44-list swipper-carousel-wrap ds44-posRel swipper-carousel-slideshow" data-nb-visible-slides="1">
-    {% if include.titreCarrousel %}
-    <p role="heading" aria-level="1" class="h1-like ds44-text--colorInvert">
-        {{ include.titreCarrousel }}
-    </p>
-    {% endif %}
-
-    <div class="swiper-container ds44-swiper-diaporama">
-
-        <button class="ds44-btnIco ds44-btnIco--carre ds44-bgDark ds44-btn-playpause" type="button" title="Arréter l'animation [nom de l'animation]">
+<div class="swipper-carousel-wrap swipper-carousel-slideshow" data-nb-visible-slides="1">
+    <div class="swiper-container">
+        {% if include.titreCarrousel %}
+        <p role="heading" aria-level="1" class="h1-like ds44-text--colorInvert">
+            {{ include.titreCarrousel }}
+        </p>
+        {% endif %}
+        <button class="ds44-btnIco ds44-btnIco--carre ds44-bgDark" type="button">
             <i class="icon icon-pause" aria-hidden="true"></i>
             <span class="visually-hidden">Arrêter l'animation</span>
         </button>
 
-        <ul class="swiper-wrapper ds44-list ds44-carousel-swiper ds44-diapo-swiper">
-            <li class="swiper-slide ds44-diapo__item">
-                {% include carrousel/diaporama/diaporama-vignette.html imageSrc="../../assets/images/sample-img-9.jpg" title="2013/29 - Titre vignette 1" legend="Antoine Parra Del Pozo, 2013" %}
+        <ul class="swiper-wrapper ds44-list grid-3-small-1 has-gutter-l ds44-carousel-swiper">
+            <li class="swiper-slide">
+                {% include carrousel/diaporama/diaporama-vignette.html imageSrc="../../assets/images/sample-img-9.jpg"
+                title="2013/29 - Titre vignette 1" legend="Antoine Parra Del Pozo, 2013" %}
             </li>
-            <li class="swiper-slide ds44-diapo__item">
-                {% include carrousel/diaporama/diaporama-vignette.html imageSrc="../../assets/images/sample-img-8.jpg" title="2013/29 - Tell Me, technique mixte sur papier" legend="Antoine Parra Del Pozo, 2013" %}
+            <li class="swiper-slide">
+                {% include carrousel/diaporama/diaporama-vignette.html imageSrc="../../assets/images/sample-img-8.jpg"
+                title="2013/29 - Tell Me, technique mixte sur papier" legend="Antoine Parra Del Pozo, 2013" %}
             </li>
-            <li class="swiper-slide ds44-diapo__item">
-                {% include carrousel/diaporama/diaporama-vignette.html imageSrc="../../assets/images/img_article_bigger@2x.jpg" %}
+            <li class="swiper-slide">
+                {% include carrousel/diaporama/diaporama-vignette.html
+                imageSrc="../../assets/images/img_article_bigger@2x.jpg" title="2013/29 - Titre vignette 3"
+                legend="Antoine Parra Del Pozo, 2013" %}
             </li>
-            <li class="swiper-slide ds44-diapo__item">
-                {% include carrousel/diaporama/diaporama-vignette.html imageSrc="../../assets/images/sample-img-4.jpg" title="2013/29 - Titre vignette 4" legend="Antoine Parra Del Pozo, 2013" %}
+            <li class="swiper-slide">
+                {% include carrousel/diaporama/diaporama-vignette.html imageSrc="../../assets/images/sample-img-4.jpg"
+                title="2013/29 - Titre vignette 4" legend="Antoine Parra Del Pozo, 2013" %}
             </li>
         </ul>
-        
+        <button class="swiper-button-prev swiper-button-white swiper-button-disabled" type="button">
+            <i class="icon icon-left" aria-hidden="true"></i>
+            <span class="visually-hidden"></span>
+        </button>
+        <button class="swiper-button-next swiper-button-white swiper-button-disabled" type="button">
+            <i class="icon icon-right" aria-hidden="true"></i>
+            <span class="visually-hidden"></span>
+        </button>
     </div>
-
-    <nav class="ds44-vignette-container">
-
-        <ul class="ds44-list ds44-swiper-imgList-container">
-            <li class="ds44-vignette_item">
-                <div class="ds44-vignetteRatioWrapper">
-                    <a href="#"><img src="../../assets/images/sample-img-9.jpg" class="ds44-vignette" alt="Voir l'image : 2013/29 - Tell Me, technique mixte sur papier - Antoine Parra Del Pozo, 2013" /></a>
-                </div>
-            </li>
-            <li class="ds44-vignette_item">
-                <div class="ds44-vignetteRatioWrapper">
-                    <a href="#"><img src="../../assets/images/img_article_bigger@2x.jpg" class="ds44-vignette" alt="Voir l'image : 2013/29 - Tell Me, technique mixte sur papier - Antoine Parra Del Pozo, 2013" /></a>
-                </div>
-            </li>
-            <li class="ds44-vignette_item">
-                <div class="ds44-vignetteRatioWrapper">
-                    <a href="#"><img src="../../assets/images/sample-img-8.jpg" class="ds44-vignette" alt="Voir l'image : 2013/29 - Tell Me, technique mixte sur papier - Antoine Parra Del Pozo, 2013" /></a>
-                </div>
-            </li>
-            <li class="ds44-vignette_item">
-                <div class="ds44-vignetteRatioWrapper">
-                    <a href="#"><img src="../../assets/images/sample-img-4.jpg" class="ds44-vignette" alt="Voir l'image : 2013/29 - Tell Me, technique mixte sur papier - Antoine Parra Del Pozo, 2013" /></a>
-                </div>
-            </li>
-        </ul>
-
-    </nav>
-    
+    <div class="swiper-pagination"></div>
+    <div class="swiper-thumbs">
+        <div class="swiper-thumbs-container">
+            <nav class="swiper-container">
+                <ul class="swiper-wrapper ds44-list">
+                    <li class="swiper-slide">
+                        {% include carrousel/diaporama/diaporama-thumb.html
+                        imageSrc="../../assets/images/sample-img-9.jpg"
+                        title="2013/29 - Titre vignette 1" legend="Antoine Parra Del Pozo, 2013" %}
+                    </li>
+                    <li class="swiper-slide">
+                        {% include carrousel/diaporama/diaporama-thumb.html
+                        imageSrc="../../assets/images/sample-img-8.jpg"
+                        title="2013/29 - Tell Me, technique mixte sur papier" legend="Antoine Parra Del Pozo, 2013" %}
+                    </li>
+                    <li class="swiper-slide">
+                        {% include carrousel/diaporama/diaporama-thumb.html
+                        imageSrc="../../assets/images/img_article_bigger@2x.jpg" title="2013/29 - Titre vignette 3"
+                        legend="Antoine Parra Del Pozo, 2013" %}
+                    </li>
+                    <li class="swiper-slide">
+                        {% include carrousel/diaporama/diaporama-thumb.html
+                        imageSrc="../../assets/images/sample-img-4.jpg"
+                        title="2013/29 - Titre vignette 4" legend="Antoine Parra Del Pozo, 2013" %}
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </div>
 </div>
