--- a/framework/scss/components/_carrousel.scss
+++ b/framework/scss/components/_carrousel.scss
@@ -1,263 +1,231 @@
 // Carrousel DS44
-.ds44-list .swipper-carousel-wrap {
-  padding-left: $ds44-container-large-margin;
-  padding-right: $ds44-container-large-margin;
-}
+.swipper-carousel-wrap {
+    .ds44-list & {
+        padding-left: $ds44-container-large-margin;
+        padding-right: $ds44-container-large-margin;
+    }
 
-.swipper-carousel-wrap--homepage {
-    .swiper-container {
-      padding: 0;
-      margin: 0;
-
-      .swiper-wrapper {
-        margin: 0;
-        grid-gap:0;
-
-        .swiper-slide {
-          width: 100%;
-          margin: 0;
+    &.ds44-container-large,
+    .ds44-homepage-container & {
+        @media screen and (max-width: $ds44-medium - .0625) {
+            margin: 0;
         }
-      }
     }
-
-    .ds44-btnIco {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      z-index: 100;
-    }
-}
-
-.swiper-container {
-  padding: 1rem 1.6rem 3rem 1.6rem;
-  margin: 0 calc(5.5% - 1.6rem);
-  margin: 0 -webkit-calc(5.5% - 1.6rem);
-}
-.swiper-container .ds44-card {
-  margin-bottom: 0;
-}
-div .swiper-button-next,
-div .swiper-button-prev {
-    color: #000;
-    width: auto;
-    height: auto;
-    position: absolute;
-    top: calc(50% - 15px);
-    top: -webkit-calc(50% - 15px);
-    transform: translateY(-50%);
-    border-radius: 3px;
-    z-index: 50;
-    padding: 15px 20px;
-    margin: 0;
-    display: block;
-}
-
-div .swiper-button-next .icon,
-div .swiper-button-prev .icon{
-    display: block;
-}
-
-div .swiper-button-prev,
-div .swiper-container-rtl .swiper-button-prev {
-    left: 0;
-    right: auto;
-}
-
-div .swiper-button-next,
-div .swiper-container-rtl .swiper-button-next {
-    right: 0;
-    left: auto;
-}
-
-div .swiper-button-next.ds44-not-edge-42::after,
-div .swiper-button-prev.ds44-not-edge-42::after {
-    font-size: 25px;
-}
-
-div .swiper-button-next.ds44-not-edge-42 i::before,
-div .swiper-button-prev.ds44-not-edge-42 i::before {
-     content: none;
-}
-
-div .swiper-button-disabled {
-    display: none;
-}
-
-.swiper-button-hidden {
-    position: absolute;
-    left: -10000px;
-    top: auto;
-}
-
-div .swiper-slide {
-    z-index: 1;
-    height: auto;
-}
-
-.swipper-carousel-slideshow-slave {
-  height: 100%;
-  width: 100%;
 
     .swiper-container {
-      height: 100%;
-      width: 100%;
+        padding: 1rem 1.6rem 3rem 1.6rem;
+        margin: 0 calc(5.5% - 1.6rem);
+        margin: 0 -webkit-calc(5.5% - 1.6rem);
+
+        @media screen and (max-width: $ds44-medium - .0625) {
+            padding: 1rem 0 0 0;
+            margin: 0 auto;
+        }
+
+        .swiper-wrapper {
+            .swiper-slide {
+                z-index: 1;
+                height: auto;
+
+                .ds44-diaporama-vignette {
+                    background-color: $ds44-background-dark;
+                    height: 615px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+
+                    @media screen and (max-width: $ds44-small - .0625) {
+                        height: 40vh;
+                    }
+
+                    .ds44-diaporama-vignette-container {
+                        display: flex;
+                        justify-content: center;
+
+                        .ds44-diaporama-vignette-image {
+                            display: block;
+                            max-width: 100%;
+                            max-height: 100%;
+                            width: auto;
+                            height: auto;
+                        }
+
+                        .ds44-diaporama-vignette-text {
+                            position: absolute;
+                            top: -100000px;
+                        }
+                    }
+                }
+
+                .ds44-diaporama-thumb {
+                    display: block;
+                    width: 7.8rem;
+                    height: 7.8rem;
+                    background-position: center center;
+                    background-size: cover;
+                }
+
+                .ds44-card {
+                    margin-bottom: 0;
+                }
+            }
+        }
+    }
+
+    .swiper-pagination {
+        position: static;
+        width: 100%;
+        background-color: $ds44-light-bg;
+        text-align: center;
+        padding: 1rem 0;
+        min-height: 4rem;
+
+        .swiper-pagination-bullet {
+            background: none;
+            width: auto;
+            height: auto;
+            display: none;
+            color: $ds44-gray;
+
+            &.swiper-pagination-bullet-active {
+                display: block;
+            }
+        }
+    }
+
+    .swiper-button-next,
+    .swiper-button-prev {
+        color: #000;
+        width: auto;
+        height: auto;
+        position: absolute;
+        top: calc(50% - 15px);
+        top: -webkit-calc(50% - 15px);
+        transform: translateY(-50%);
+        border-radius: 3px;
+        z-index: 50;
+        padding: 15px 20px;
+        margin: 0;
+        display: block;
+
+        @media screen and (max-width: $ds44-medium - .0625) {
+            color: #FFF;
+            width: auto;
+            height: auto;
+            background: #000;
+        }
+
+        &.swiper-button-white {
+            color: #fff;
+        }
+
+        &.ds44-not-edge-42 {
+            &::after {
+                font-size: 25px;
+
+                @media screen and (max-width: $ds44-medium - .0625) {
+                    font-size: 15px;
+                }
+            }
+
+            i::before {
+                content: none;
+            }
+        }
+
+        &.swiper-button-disabled {
+            display: none;
+        }
+
+        &.swiper-button-hidden {
+            position: absolute;
+            left: -10000px;
+            top: auto;
+        }
+
+        .icon {
+            display: block;
+        }
+    }
+
+    .swiper-button-prev,
+    .swiper-container-rtl .swiper-button-prev {
+        left: 0;
+        right: auto;
+    }
+
+    .swiper-button-next,
+    .swiper-container-rtl .swiper-button-next {
+        right: 0;
+        left: auto;
+    }
+
+    .swiper-thumbs {
+        background-color: $ds44-light-bg;
+        display: flex;
+        align-items: center;
+
+        .swiper-thumbs-container {
+            max-width: 930px;
+            margin: 0 auto;
+            padding: 1rem 0 2rem 0;
+
+            .swiper-container {
+                .swiper-wrapper {
+                    .swiper-slide {
+                        width: auto;
+                        cursor: pointer;
+
+                        &.swiper-slide-thumb-active {
+                            border-bottom: 2px solid $ds44-LA;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    &.swipper-carousel-slideshow {
+        position: relative;
+
+        .swiper-container {
+            padding: 0;
+            margin: 0;
+
+            .swiper-wrapper {
+                margin: 0;
+                grid-gap: 0;
+
+                .swiper-slide {
+                    width: 100%;
+                    margin: 0;
+                }
+            }
+        }
+
+        .ds44-btnIco {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            z-index: 100;
+        }
+    }
+
+    &.swipper-carousel-slideshow-slave {
+        height: 100%;
+        width: 100%;
+
+        .swiper-container {
+            height: 100%;
+            width: 100%;
+        }
     }
 }
 
 .ds44-ssTitreH1_home {
-  font-size: 3.4rem;
-}
+    font-size: 3.4rem;
 
-
-/* Diaporama photo */
-
-.ds44-swiper-diaporama {
-  min-height: 615px;
-  max-width: 930px;
-  margin: 0 auto;
-  padding: 0;
-}
-
-/* Bouton de marche / arrêt */
-.ds44-btn-playpause {
-    position: absolute;
-    z-index: 100;
-    bottom: 62px;
-    left: 0;
-}
-
-.ds44-diapo-swiper { // ul
-  margin: 0;
-  align-items: center;
-  text-align: center;
-
-  .ds44-diapo__item { // li
-    
-  }
-}
-
-.ds44-diapoContainer__img {
-  position: initial;
-  background-color: $ds44-background-dark;
-  min-height: 615px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.ds44-diaporamaCaption {
-  background-color: $ds44-light-bg;
-  width: 100%;
-  text-align: center;
-  padding: 1rem 0;
-  min-height: 4rem;
-}
-
-.ds44-vignette-container {
-  background-color: $ds44-light-bg;
-  max-width: 930px; // same as diaporama container
-  margin: 0 auto;
-  padding: 1rem 0 2rem 0;
-  text-align: center;
-}
-
-.ds44-vignette_item {
-  display: inline-block;
-  margin-right: 1.5rem;
-  width: 78px;
-  height: 78px;
-  vertical-align: middle;
-
-  &:last-child {
-    margin-right: 0;
-  }
-
-}
-
-.ds44-vignetteRatioWrapper {
-  position: relative;
-  width: 100%;
-  height: 0;
-  display: block;
-  padding-top: 100%;
-}
-
-
-.ds44-vignette {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: block;
-  object-fit: cover;
-}
-
-
-
-@media screen and (max-width: $ds44-medium - .0625) {
-
-  .ds44-container-large.swipper-carousel-wrap,
-  .ds44-homepage-container .swipper-carousel-wrap {
-    margin: 0;
-  }
-
-  .swiper-container {
-    padding: 1rem 0 0 0 ;
-    margin: 0 auto;
-  }
-
-  div .swiper-button-next, div .swiper-button-prev {
-    color: #FFF;
-    width: auto;
-    height: auto;
-    background: #000;
-    padding: 15px 20px;
-  }
-
-  div .swiper-button-next.ds44-not-edge-42::after, 
-  div .swiper-button-prev.ds44-not-edge-42::after {
-      font-size: 15px;
-  }
-
-  .ds44-vignette-container {
-    margin: 0 auto;
-  }
-
-}
-
-@media screen and (max-width: $ds44-small - .0625) {
-
-    .swipper-carousel-wrap {
-        margin-left: -$ds44-mobile-margins;
-        margin-right: -$ds44-mobile-margins;
+    @media screen and (max-width: $ds44-small - .0625) {
+        font-size: 2.4rem;
     }
-
-    .ds44-ssTitreH1_home {
-      font-size: 2.4rem;
-    }
-
-    /* Bouton marche / arrêt */
-    .ds44-btn-playpause {
-        left: 1rem;
-    }
-
-    .ds44-swiper-diaporama {
-      min-height: 70vh;
-      max-width: 100%;
-    }
-
-    .ds44-diapoContainer__img {
-      min-height: 70vh;
-    }
-
-    .ds44-vignette_item {
-      margin: .5rem;
-    
-      &:last-child {
-        margin-right: .5rem;
-      }
-    }
-
-
 }
