--- a/framework/scss/components/_onglets.scss
+++ b/framework/scss/components/_onglets.scss
@@ -173,6 +173,11 @@
         display: block !important;
         clear: both !important;
         margin: 0;
+        height: inherit;
+    }
+
+    .ds44-blocBtnOnglets {
+        display: none !important;
     }
 
 }
