--- a/framework/scss/components/_buttons.scss
+++ b/framework/scss/components/_buttons.scss
@@ -507,7 +507,9 @@ a.ds44-btnStd--retourPage {
   .ds44-btnStd--large,
   .ds44-btn--inverted,
   .ds44-btnLink,
-  .ds44-btn-fixed {
+  .ds44-btn-fixed,
+  .ds44-btnIco {
     display: none !important;
   }
+
 }
