--- a/framework/scss/_config/_variables.scss
+++ b/framework/scss/_config/_variables.scss
@@ -186,7 +186,7 @@ $ds44-padding-xxlarge         : $ds44-padding-base *5   !default;
 
 $ds44-light             : #FFF                !default;
 $ds44-dark              : #000                !default;
-$ds44-gray              : #666                !default;
+$ds44-gray              : #5C5C5C             !default;
 $ds44-lightgray         : #E6E6E6             !default;
 $ds44-darkgray          : #333                !default;
 $ds44-LA                : #99E6D1             !default;
