--- a/docs/_includes/modal/inc-newsletter_archives.html
+++ b/docs/_includes/modal/inc-newsletter_archives.html
@@ -1,9 +1,9 @@
-<section class="ds44-modal-container" id="overlay-newsletter-archives" aria-hidden="true" role="dialog">
+<section class="ds44-modal-container" id="overlay-newsletter-archives" aria-hidden="true" role="dialog" aria-labelledby="overlay-newsletter-archives-title">
     <div class="ds44-modal-box">
         <button class="ds44-btnOverlay--modale ds44-btnOverlay--closeOverlay" type="button" title="Fermer la boîte de dialogue : recevoir nos infos par email" data-js="ds44-modal-action-close">
             <i class="icon icon-cross icon--xlarge" aria-hidden="true"></i><span class="ds44-btnInnerText--bottom">Fermer</span>
         </button>
-        <h1 class="h2-like">Recevoir nos infos</h1>
+        <h1 id="overlay-newsletter-archives-title" class="h2-like">Recevoir nos infos</h1>
         <div class="ds44-modal-gab">
             <p class="ds44-textLegend ds44-textLegend--mentions">Les champs marqués d’un astérisque * sont obligatoires</p>
             <form>
