--- a/framework/scss/components/_wysiwyg.scss
+++ b/framework/scss/components/_wysiwyg.scss
@@ -85,6 +85,9 @@ blockquote {
     padding: .5rem 1rem;
     display: inline-block;
     margin: 1.5rem 0 1rem 0;
+    font-size: 16px !important;
+    line-height: 1.4em ;
+    font-family: 'Muli', Arial, Helvetica, sans-serif;
 }
 
 /* Tables */
