--- a/framework/scss/components/_wysiwyg.scss
+++ b/framework/scss/components/_wysiwyg.scss
@@ -84,7 +84,7 @@ blockquote {
     background-color: $ds44-contextual-color;
     padding: .5rem 1rem;
     display: inline-block;
-    margin: 1.5rem 0 1rem 0;
+    margin: 1.5rem 0 1rem 0 !important;
     font-size: 16px !important;
     line-height: 1.4em ;
     font-family: 'Muli', Arial, Helvetica, sans-serif;
