--- a/docs/_includes/boxes/box--eluAssociations.html
+++ b/docs/_includes/boxes/box--eluAssociations.html
@@ -8,7 +8,7 @@
                	   <img src="../../assets/images/medaillon-tramier.jpg" alt="" class="ds44-w100 ds44-imgRatio--profil">
                 </picture>
                  <div class="ds44-card__section">
-                   <p role="heading" aria-level="3" class="ds44-card__title"><a href="#" class="ds44-card__globalLink"  title="Fiche détaillée de Claire Tramier">Claire Tramier</a></p>
+                   <p class="ds44-card__title"><a href="#" class="ds44-card__globalLink"  title="Fiche détaillée de Claire Tramier">Claire Tramier</a></p>
                    <p>Europe Ecologie - Les Verts (EELV)</p>
                  </div>
              </section>
@@ -19,7 +19,7 @@
              	    <img src="../../assets/images/medaillon-verger.jpg" alt="" class="ds44-w100 ds44-imgRatio--profil">
                 </picture>
                  <div class="ds44-card__section">
-                   <p role="heading" aria-level="3" class="ds44-card__title"><a href="#" class="ds44-card__globalLink"  title="Fiche détaillée de Marcel Verger">Marcel Verger</a></p>
+                   <p class="ds44-card__title"><a href="#" class="ds44-card__globalLink"  title="Fiche détaillée de Marcel Verger">Marcel Verger</a></p>
                    <p>Divers gauche (DVG)</p>
                  </div>
              </section>
