--- a/docs/_includes/footer/footer-MDPH.html
+++ b/docs/_includes/footer/footer-MDPH.html
@@ -8,7 +8,7 @@
                 </picture>
             </div>
             <div class="col-5-small-1 ds44-mb3">
-                <h2 class="h4-like" id="idTitreFooter1" role="heading">La MDPH</h2>
+                <h2 class="h4-like" id="idTitreFooter1">La MDPH</h2>
                 <p class="ds44-docListElem"><i class="icon icon-marker ds44-docListIco" aria-hidden="true">&nbsp;</i><span class="visually-hidden">Adresse : </span>Rond point du forum d'Orvault<br>300 route de Vannes 44701 Orvault</p>
                 <p class="ds44-docListElem mtm"><i class="icon icon-phone ds44-docListIco" aria-hidden="true">&nbsp;</i><span class="visually-hidden">Téléphone : </span>08 00 40 41 44 (n° vert) ou 02 28 09 40 50</p>
                 <p class="ds44-docListElem mtm">
