--- a/docs/_includes/composants-transverses/focus-projets.html
+++ b/docs/_includes/composants-transverses/focus-projets.html
@@ -20,7 +20,7 @@
                             <p role="heading" aria-level="2" class="ds44-card__title">
                                 <a href="#" class="ds44-card__globalLink">Objectif 100% fibre en 2025</a>
                             </p>
-                            <a href="#" tabindex="-1" aria-hidden="true"><i class="icon icon-arrow-right ds44-cardArrow" aria-hidden="true"></i><span class="visually-hidden">Objectif 100% fibre en 2025</span></a>
+                            <a href="#" tabindex="-1" aria-hidden="true"><i class="icon icon-arrow-right ds44-cardArrow" aria-hidden="true"></i></a>
                         </div>
                     </div>
                 </section>
@@ -37,7 +37,7 @@
                             <p role="heading" aria-level="2" class="ds44-card__title">
                                 <a href="#" class="ds44-card__globalLink">Les grands projets d’aménagement d’ici 2021</a>
                             </p>
-                            <a href="#" tabindex="-1" aria-hidden="true"><i class="icon icon-arrow-right ds44-cardArrow" aria-hidden="true"></i><span class="visually-hidden">Les grands projets d’aménagement d’ici 2021</span></a>
+                            <a href="#" tabindex="-1" aria-hidden="true"><i class="icon icon-arrow-right ds44-cardArrow" aria-hidden="true"></i></a>
                         </div>
                     </div>
                 </section>
@@ -57,7 +57,7 @@
                                 <a href="#" class="ds44-card__globalLink">Pour la construction ou rénovation des
                                     collèges</a>
                             </p>
-                            <a href="#" tabindex="-1" aria-hidden="true"><i class="icon icon-arrow-right ds44-cardArrow" aria-hidden="true"></i><span class="visually-hidden">Pour la construction ou rénovation des collèges</span></a>
+                            <a href="#" tabindex="-1" aria-hidden="true"><i class="icon icon-arrow-right ds44-cardArrow" aria-hidden="true"></i></a>
                         </div>
                     </div>
                 </section>
@@ -74,12 +74,12 @@
                             <p role="heading" aria-level="2" class="ds44-card__title">
                                 <a href="#" class="ds44-card__globalLink">Nos engagements passés à la loupe</a>
                             </p>
-                            <a href="#" tabindex="-1" aria-hidden="true"><i class="icon icon-arrow-right ds44-cardArrow" aria-hidden="true"></i><span class="visually-hidden">Nos engagements passés à la loupe</span></a>
+                            <a href="#" tabindex="-1" aria-hidden="true"><i class="icon icon-arrow-right ds44-cardArrow" aria-hidden="true"></i></a>
                         </div>
                     </div>
                 </section>
             </div>
-            <a href="#" class="ds44-btnStd ds44-btnStd--large ds44-show-tiny-to-medium ds44-show-mobile ds44-btnFullMobile"><span class="ds44-btnInnerText">Mieux nous connaître</span><i class="icon icon-long-arrow-right" aria-hidden="true"></i></a>
+            <p><a href="#" class="ds44-btnStd ds44-btnStd--large ds44-show-tiny-to-medium ds44-show-mobile ds44-btnFullMobile"><span class="ds44-btnInnerText">Mieux nous connaître</span><i class="icon icon-long-arrow-right" aria-hidden="true"></i></a></p>
         </div>
     </div>
 </section>
