--- a/docs/_includes/form/field/input/autocomplete.html
+++ b/docs/_includes/form/field/input/autocomplete.html
@@ -20,6 +20,7 @@
 
     <div class="ds44-autocomp-container hidden">
         <div class="ds44-autocomp-list">
+            <div class="visually-hidden ds44-js-nb-results" aria-live="polite"></div>
             <ul class="ds44-list" role="listbox"></ul>
         </div>
     </div>
