--- a/docs/_variations/templates/template-generique-centre.html
+++ b/docs/_variations/templates/template-generique-centre.html
@@ -10,7 +10,7 @@ layout: pattern
 	</div>
 </header>
 
-<main role="main" id="content" tabindex="-1">
+<main role="main" id="content">
 
 	<article class="ds44-container-large">
 
