--- a/framework/scss/components/_collapser.scss
+++ b/framework/scss/components/_collapser.scss
@@ -27,7 +27,7 @@
       }
     }
 
-    .ds44-collapser_button { 
+    .ds44-collapser_button {
         &:hover,
         &:focus {
             text-decoration: underline;
@@ -74,6 +74,7 @@
   background-color: transparent;
   position: relative;
   line-height: 1.4;
+  font-weight: inherit;
 
   .icon {
     position: absolute;
