--- a/docs/_includes/FAQ/FAQ-contenu.html
+++ b/docs/_includes/FAQ/FAQ-contenu.html
@@ -4,6 +4,7 @@
     <ul class="ds44-collapser ds44-mb-std ">
         <li class="ds44-collapser_element">
             <button type="button" class="ds44-collapser_button" role="heading" aria-level="3">Où trouver le dossier à remplir pour une demande d’APA à domicile ?<i class="icon icon-down" aria-hidden="true"></i></button>
+            <!-- Ce que Franck souhaite : <p role="heading" aria-level="3"><button type="button" class="ds44-collapser_button" aria-expanded="false">Où trouver le dossier à remplir pour une demande d’APA à domicile ?<i class="icon icon-down" aria-hidden="true"></i></button></p> -->
             <div class="ds44-collapser_content">
                 <ul class="ds44-list ds44-collapser_content--level2">
                     <li><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam convallis tincidunt facilisis. Etiam non purus nulla. Vivamus quis sapien at lorem vestibulum tempus sit amet non orci. Fusce tincidunt ligula sit amet justo ultricies, ultrices egestas ante tincidunt. Nullam vulputate finibus turpis, sed congue purus vestibulum eget.</p></li>
