--- a/docs/_includes/footer/footer-MDPH.html
+++ b/docs/_includes/footer/footer-MDPH.html
@@ -2,10 +2,10 @@
     <section class="ds44-container-large ds44--xl-padding-tb">
         <div class="grid-12-small-1 has-gutter-l">
             <div class="col-2-small-1">
-                <picture class="ds44-logo ds44-mb3 ds44-mobile-reduced-mt ds44-mobile-reduced-pt">
+                <div class="ds44-logo ds44-mb3 ds44-mobile-reduced-mt ds44-mobile-reduced-pt">
                     <img src="../../assets/images/logo-loire-atlantique.svg" alt="Loire Atlantique" class="mbm" />
                     <img src="../../assets/images/logos/logo-mdph.svg" alt="la MDPH - Maison départementale des personnes handicapées de Loire Atlantique" />
-                </picture>
+                </div>
             </div>
             <div class="col-5-small-1 ds44-mb3">
                 <h2 class="h4-like" id="idTitreFooter1">La MDPH</h2>
