--- a/docs/_includes/composants-transverses/focus-projets.html
+++ b/docs/_includes/composants-transverses/focus-projets.html
@@ -7,77 +7,12 @@
                 <p><a href="#" class="ds44-btnStd ds44-btnStd--large ds44-hide-tiny-to-medium ds44-btnFullMobile"><span class="ds44-btnInnerText">Mieux nous connaître</span><i class="icon icon-long-arrow-right" aria-hidden="true"></i></a></p>
             </div>
             <div class="col-4 colFocusProjets">
-                <section class="ds44-card ds44-js-card ds44-card--horizontal">
-                    <div class="ds44-flex-container ds44-flex-valign-center">
-                        <div class="ds44-card__section--horizontal--img">
-                            <a href="#" tabindex="-1" aria-hidden="true">
-                                <picture class="ds44-container-imgRatio ds44-container-imgRatio--carre">
-                                    <img src="../../assets/images/ds44-card--sampleImg.png" alt="" class=" ds44-imgRatio" />
-                                </picture>
-                            </a>
-                        </div>
-                        <div class="ds44-card__section--horizontal">
-                            <p role="heading" aria-level="2" class="ds44-card__title">
-                                <a href="#" class="ds44-card__globalLink">Objectif 100% fibre en 2025</a>
-                            </p>
-                            <a href="#" tabindex="-1" aria-hidden="true"><i class="icon icon-arrow-right ds44-cardArrow" aria-hidden="true"></i></a>
-                        </div>
-                    </div>
-                </section>
-                <section class="ds44-card ds44-js-card ds44-card--horizontal">
-                    <div class="ds44-flex-container ds44-flex-valign-center">
-                        <div class="ds44-card__section--horizontal--img">
-                            <a href="#" tabindex="-1" aria-hidden="true">
-                                <picture class="ds44-container-imgRatio ds44-container-imgRatio--carre">
-                                    <img src="../../assets/images/ds44-card--sampleImg.png" alt="" class=" ds44-imgRatio" />
-                                </picture>
-                            </a>
-                        </div>
-                        <div class="ds44-card__section--horizontal">
-                            <p role="heading" aria-level="2" class="ds44-card__title">
-                                <a href="#" class="ds44-card__globalLink">Les grands projets d’aménagement d’ici 2021</a>
-                            </p>
-                            <a href="#" tabindex="-1" aria-hidden="true"><i class="icon icon-arrow-right ds44-cardArrow" aria-hidden="true"></i></a>
-                        </div>
-                    </div>
-                </section>
+                {% include card/card--horizontal.html title="Objectif 100% fibre en 2025" ariaLevel='"aria-level="2"' %}
+                {% include card/card--horizontal.html title="Les grands projets d’aménagement d’ici 2021" ariaLevel='"aria-level="2"' %}
             </div>
             <div class="col-4 colFocusProjets">
-                <section class="ds44-card ds44-js-card ds44-card--horizontal">
-                    <div class="ds44-flex-container ds44-flex-valign-center">
-                        <div class="ds44-card__section--horizontal--img">
-                            <a href="#" tabindex="-1" aria-hidden="true">
-                                <picture class="ds44-container-imgRatio ds44-container-imgRatio--carre">
-                                    <img src="../../assets/images/ds44-card--sampleImg.png" alt="" class=" ds44-imgRatio" />
-                                </picture>
-                            </a>
-                        </div>
-                        <div class="ds44-card__section--horizontal">
-                            <p role="heading" aria-level="2" class="ds44-card__title">
-                                <a href="#" class="ds44-card__globalLink">Pour la construction ou rénovation des
-                                    collèges</a>
-                            </p>
-                            <a href="#" tabindex="-1" aria-hidden="true"><i class="icon icon-arrow-right ds44-cardArrow" aria-hidden="true"></i></a>
-                        </div>
-                    </div>
-                </section>
-                <section class="ds44-card ds44-js-card ds44-card--horizontal">
-                    <div class="ds44-flex-container ds44-flex-valign-center">
-                        <div class="ds44-card__section--horizontal--img">
-                            <a href="#" tabindex="-1" aria-hidden="true">
-                                <picture class="ds44-container-imgRatio ds44-container-imgRatio--carre">
-                                    <img src="../../assets/images/ds44-card--sampleImg.png" alt="" class=" ds44-imgRatio" />
-                                </picture>
-                            </a>
-                        </div>
-                        <div class="ds44-card__section--horizontal">
-                            <p role="heading" aria-level="2" class="ds44-card__title">
-                                <a href="#" class="ds44-card__globalLink">Nos engagements passés à la loupe</a>
-                            </p>
-                            <a href="#" tabindex="-1" aria-hidden="true"><i class="icon icon-arrow-right ds44-cardArrow" aria-hidden="true"></i></a>
-                        </div>
-                    </div>
-                </section>
+                {% include card/card--horizontal.html title="Pour la construction ou rénovation des collèges" ariaLevel='"aria-level="2"' %}
+                {% include card/card--horizontal.html title="Nos engagements passés à la loupe" ariaLevel='"aria-level="2"' %}
             </div>
             <p><a href="#" class="ds44-btnStd ds44-btnStd--large ds44-show-tiny-to-medium ds44-show-mobile ds44-btnFullMobile"><span class="ds44-btnInnerText">Mieux nous connaître</span><i class="icon icon-long-arrow-right" aria-hidden="true"></i></a></p>
         </div>
