--- a/docs/_includes/apps/inc-menu-app.html
+++ b/docs/_includes/apps/inc-menu-app.html
@@ -1,4 +1,4 @@
-<section id="menu" role="dialog" aria-label="Menu de navigation de l'appli" class="ds44-menu-app ds44-flex-container--column ds44-fsb ds44--l-padding ds44-wave-grey-app">
+<section id="menu" role="dialog" aria-modal="true" aria-label="Menu de navigation de l'appli" class="ds44-menu-app ds44-flex-container--column ds44-fsb ds44--l-padding ds44-wave-grey-app">
 
     <div class="ds44-flex-container ds44-flex-valign-center">
         <div class="ds44-colLeft">        
