--- a/docs/_includes/menu/inc-menu-sommaire.html
+++ b/docs/_includes/menu/inc-menu-sommaire.html
@@ -1,4 +1,4 @@
-<section id="summaryMenu" class="ds44-overlay ds44-overlay--navFromBottom" role="dialog" aria-label="Sommaire" aria-hidden="true" {{ include.surcharge }}>
+<section id="summaryMenu" class="ds44-overlay ds44-overlay--navFromBottom" role="dialog" aria-modal="true" aria-label="Sommaire" aria-hidden="true" {{ include.surcharge }}>
     <div class="ds44-container-menuBackLink">
         <p role="heading" aria-level="1" class="ds44-menuBackLink" id="titreRechercher">Sommaire</p>
     </div>
