--- a/docs/_includes/modal/faire-demande.html
+++ b/docs/_includes/modal/faire-demande.html
@@ -1,4 +1,4 @@
-<section class="ds44-modal-container" id="overlay-faire-demande" aria-hidden="true" role="dialog" aria-labelledby="overlay-faire-demande-title">
+<section class="ds44-modal-container" id="overlay-faire-demande" aria-hidden="true" role="dialog" aria-modal="true" aria-labelledby="overlay-faire-demande-title">
 	<div class="ds44-modal-box">
 		<button class="ds44-btnOverlay--modale ds44-btnOverlay--closeOverlay" type="button" title="Fermer la boite de dialogue : faire une demande" data-js="ds44-modal-action-close"><i class="icon icon-cross icon--xlarge" aria-hidden="true"></i><span class="ds44-btnInnerText--bottom">Fermer</span></button>
 		<h1 id="overlay-faire-demande-title" class="h2-like">Faire une demande</h1>
