--- a/docs/_includes/apps/inc-alerte.html
+++ b/docs/_includes/apps/inc-alerte.html
@@ -1,5 +1,5 @@
 
-<section class="ds44-modal-container show" id="overlay-alerte" aria-hidden="true" role="dialog" aria-labelledby="overlay-alerte-title">
+<section class="ds44-modal-container show" id="overlay-alerte" aria-hidden="true" role="dialog" aria-modal="true" aria-labelledby="overlay-alerte-title">
     <div class="ds44-modal-box ds44-noPdg">
         <button class="ds44-btnOverlay--modale ds44-btnOverlay--closeOverlay" type="button" title="Fermer la boîte de dialogue : [titre de la modale]" data-js="ds44-modal-action-close"><i class="icon icon-cross icon--xlarge" aria-hidden="true"></i><span class="ds44-btnInnerText--bottom">Fermer</span></button>
         <h1 id="overlay-alerte-title" class="h2-app-like ds44-mt1 ds44--m-padding-lr"><img src="../../assets/images/apps/ponts/icones/svg/{{ include.code }}.svg" alt="" class="ds44-app-pictoOverlay"> {{ include.titre }}</h1>
