--- a/docs/_includes/header/inc-header.html
+++ b/docs/_includes/header/inc-header.html
@@ -40,7 +40,7 @@
         </div>
         <div class="ds44-blocMenu" aria-hidden="true">
             <section class="ds44-menuBox" id="menu">
-                <div class="ds44-overlay ds44-theme ds44-bgCircle ds44-bg-br ds44-overlay--navNiv1" role="dialog" aria-label="Menu principal : premier niveau de navigation" id="nav1" aria-hidden="true">
+                <div class="ds44-overlay ds44-theme ds44-bgCircle ds44-bg-br ds44-overlay--navNiv1" role="dialog" aria-modal="true" aria-label="Menu principal : premier niveau de navigation" id="nav1" aria-hidden="true">
                     <p role="heading" aria-level="1" class="visually-hidden">Menu de navigation</p>
                     <button class="ds44-btnOverlay ds44-btnOverlay--closeOverlay" type="button" aria-label="Fermer le menu de navigation">
                         <i class="icon icon-cross icon--xlarge" aria-hidden="true"></i><span class="ds44-btnInnerText--bottom">Fermer</span>
@@ -57,7 +57,7 @@
                                     </button>
                                 </li>
                                 <li>
-                                    <button type="button" class="ds44-menuBtn" data-ssmenu="nav4" aria-expanded="true">Près de chez vous<i class="icon icon-right" aria-hidden="true"></i>
+                                    <button type="button" class="ds44-menuBtn" data-ssmenu="nav4">Près de chez vous<i class="icon icon-right" aria-hidden="true"></i>
                                     </button>
                                 </li>
                                 <li>
