--- a/docs/_includes/menu/inc-menu-rechercher.html
+++ b/docs/_includes/menu/inc-menu-rechercher.html
@@ -1,5 +1,5 @@
 <section id="menuRech">
-    <div class="ds44-overlay ds44-overlay--navNiv2 ds44-wave-grey ds44-bg-pdr ds44-whiteBG" role="dialog" aria-label="Menu de recherche" aria-hidden="true" {{ include.surcharge }}>
+    <div class="ds44-overlay ds44-overlay--navNiv2 ds44-wave-grey ds44-bg-pdr ds44-whiteBG" role="dialog" aria-modal="true" aria-label="Menu de recherche" aria-hidden="true" {{ include.surcharge }}>
 
         <div class="ds44-container-menuBackLink">
             <p role="heading" aria-level="1" class="ds44-menuBackLink" id="titreRechercher">Rechercher</p>
