--- a/docs/_includes/menu/navigation-pdcv.html
+++ b/docs/_includes/menu/navigation-pdcv.html
@@ -1,4 +1,4 @@
-<section id="nav4" class="ds44-overlay ds44-overlay--navNiv2 ds44-theme ds44-bgCircle ds44-bg-br" role="dialog" aria-label="Menu Près de chez vous : second niveau de navigation" aria-hidden="true" {{ include.surcharge }}>
+<section id="nav4" class="ds44-overlay ds44-overlay--navNiv2 ds44-theme ds44-bgCircle ds44-bg-br" role="dialog" aria-modal="true" aria-label="Menu Près de chez vous : second niveau de navigation" aria-hidden="true" {{ include.surcharge }}>
 
     <div class="ds44-container-menuBackLink">
         <button type="button" title="Retour au premier niveau du menu de navigation" class="ds44-btn-backOverlay"><i class="icon icon-arrow-left icon--xlarge" aria-hidden="true"></i><span class="ds44-btnInnerText--bottom">Retour</span></button>
