--- a/docs/_includes/menu/navigation-principale-n2.html
+++ b/docs/_includes/menu/navigation-principale-n2.html
@@ -1,4 +1,4 @@
-<section id="nav2" class="ds44-overlay ds44-theme ds44-bgCircle ds44-bg-br ds44-overlay--navNiv2" role="dialog" aria-label="Menu Besoin d'aides : second niveau de navigation" aria-hidden="true" {{ include.surchargeN2 }}>
+<section id="nav2" class="ds44-overlay ds44-theme ds44-bgCircle ds44-bg-br ds44-overlay--navNiv2" role="dialog" aria-modal="true" aria-label="Menu Besoin d'aides : second niveau de navigation" aria-hidden="true" {{ include.surchargeN2 }}>
     <div class="ds44-container-menuBackLink">
         <button type="button" title="Retour au premier niveau du menu de navigation" class="ds44-btn-backOverlay">
             <i class="icon icon-arrow-left icon--xlarge" aria-hidden="true"></i><span class="ds44-btnInnerText--bottom">Retour</span>
@@ -57,7 +57,7 @@
         </div>
     </nav>
 </section>
-<section id="nav3" class="ds44-overlay ds44-theme ds44-bgCircle ds44-bg-br ds44-overlay--navNiv2" role="dialog" aria-label="Menu Besoin d'air : second niveau de navigation" aria-hidden="true">
+<section id="nav3" class="ds44-overlay ds44-theme ds44-bgCircle ds44-bg-br ds44-overlay--navNiv2" role="dialog" aria-modal="true" aria-label="Menu Besoin d'air : second niveau de navigation" aria-hidden="true">
     <div class="ds44-container-menuBackLink">
         <button type="button" title="Retour au premier niveau du menu de navigation" class="ds44-btn-backOverlay">
             <i class="icon icon-arrow-left icon--xlarge" aria-hidden="true"></i><span class="ds44-btnInnerText--bottom">Retour</span>
