--- a/docs/_includes/menu/navigation-principale.html
+++ b/docs/_includes/menu/navigation-principale.html
@@ -5,7 +5,7 @@
 
         <section class="ds44-menuBox" id="menu">
 
-            <div class="ds44-overlay ds44-theme ds44-bgCircle ds44-bg-br ds44-overlay--navNiv1" role="dialog" aria-label="Menu principal niveau 1" id="nav1">
+            <div class="ds44-overlay ds44-theme ds44-bgCircle ds44-bg-br ds44-overlay--navNiv1" role="dialog" aria-modal="true" aria-label="Menu principal niveau 1" id="nav1">
 
                 <button class="ds44-btnOverlay ds44-btnOverlay--closeOverlay" type="button" aria-label="Fermer le menu de navigation"><i class="icon icon-cross icon--xlarge" aria-hidden="true"></i><span class="ds44-btnInnerText--bottom">Fermer</span></button>
 
