--- a/docs/_includes/modal/inc-formulaire-contact.html
+++ b/docs/_includes/modal/inc-formulaire-contact.html
@@ -1,4 +1,4 @@
-<section class="ds44-modal-container" id="overlay-formulaire-contact" aria-hidden="true" role="dialog" aria-labelledby="overlay-formulaire-contact-title">
+<section class="ds44-modal-container" id="overlay-formulaire-contact" aria-hidden="true" role="dialog" aria-modal="true" aria-labelledby="overlay-formulaire-contact-title">
     <div class="ds44-modal-box">
         <button class="ds44-btnOverlay--modale ds44-btnOverlay--closeOverlay" type="button" title="Fermer la boite de dialogue : qui contacter" data-js="ds44-modal-action-close"><i class="icon icon-cross icon--xlarge" aria-hidden="true"></i><span class="ds44-btnInnerText--bottom">Fermer</span></button>
         <h1 id="overlay-formulaire-contact-title" class="h2-like">Envoyer un mail à [nom de la structure ou du contact]</h1>
