--- a/docs/_includes/modal/inc-navigation-applis.html
+++ b/docs/_includes/modal/inc-navigation-applis.html
@@ -1,4 +1,4 @@
-<section class="ds44-modal-container" id="overlay-sites-applis" aria-hidden="true" role="dialog" aria-labelledby="overlay-sites-applis-title">
+<section class="ds44-modal-container" id="overlay-sites-applis" aria-hidden="true" role="dialog" aria-modal="true" aria-labelledby="overlay-sites-applis-title">
 	<div class="ds44-modal-box">
 		<button class="ds44-btnOverlay--modale ds44-btnOverlay--closeOverlay" type="button" title="Fermer la boite de dialogue : Sites et applis du département" data-js="ds44-modal-action-close"><i class="icon icon-cross icon--xlarge" aria-hidden="true"></i><span class="ds44-btnInnerText--bottom">Fermer</span></button>
 		<h1 id="overlay-sites-applis-title" class="h2-like">Sites et applis du Département</h1>
