--- a/docs/_includes/modal/inc-newsletter_archives.html
+++ b/docs/_includes/modal/inc-newsletter_archives.html
@@ -1,4 +1,4 @@
-<section class="ds44-modal-container" id="overlay-newsletter-archives" aria-hidden="true" role="dialog" aria-labelledby="overlay-newsletter-archives-title">
+<section class="ds44-modal-container" id="overlay-newsletter-archives" aria-hidden="true" role="dialog" aria-modal="true" aria-labelledby="overlay-newsletter-archives-title">
     <div class="ds44-modal-box">
         <button class="ds44-btnOverlay--modale ds44-btnOverlay--closeOverlay" type="button" title="Fermer la boîte de dialogue : recevoir nos infos par email" data-js="ds44-modal-action-close">
             <i class="icon icon-cross icon--xlarge" aria-hidden="true"></i><span class="ds44-btnInnerText--bottom">Fermer</span>
