--- a/docs/_includes/modal/inc-qui-contacter-rech.html
+++ b/docs/_includes/modal/inc-qui-contacter-rech.html
@@ -1,4 +1,4 @@
-<section class="ds44-modal-container" id="overlay-qui-contacter-rech" aria-hidden="true" role="dialog" aria-labelledby="overlay-qui-contacter-rech-title">
+<section class="ds44-modal-container" id="overlay-qui-contacter-rech" aria-hidden="true" role="dialog" aria-modal="true" aria-labelledby="overlay-qui-contacter-rech-title">
     <div class="ds44-modal-box">
         <button class="ds44-btnOverlay--modale ds44-btnOverlay--closeOverlay" type="button" title="Fermer la boite de dialogue : qui contacter" data-js="ds44-modal-action-close">
             <i class="icon icon-cross icon--xlarge" aria-hidden="true"></i><span class="ds44-btnInnerText--bottom">Fermer</span>
