--- a/docs/_includes/onglets/onglets-composites.html
+++ b/docs/_includes/onglets/onglets-composites.html
@@ -7,10 +7,10 @@
                         <a href="#id_first" class="js-tablist__link ds44-tabs__link" id="label_id_first" aria-current="true">{{ include.titleOngletUn }}</a>
                     </li>
                     <li class="ds44-tabs__item ds44-fg1" id="tabs__2">
-                        <a href="#id_second" class="js-tablist__link ds44-tabs__link" id="label_id_second">{{ include.titleOngletDeux }}</a>
+                        <a href="#id_second" class="js-tablist__link ds44-tabs__link" id="label_id_second" aria-disabled="true">{{ include.titleOngletDeux }}</a>
                     </li>
                     <li class="ds44-tabs__item ds44-fg1" id="tabs__3">
-                        <a href="#id_third" class="js-tablist__link ds44-tabs__link" id="label_id_third">{{ include.titleOngletTrois }}</a>
+                        <a href="#id_third" class="js-tablist__link ds44-tabs__link" id="label_id_third" aria-disabled="true">{{ include.titleOngletTrois }}</a>
                     </li>
                 </ul>
             </nav>
@@ -30,19 +30,19 @@
         </div>
         <div id="id_first" class="js-tabcontent ds44-tabs__content ds44-inner-container ds44-xl-margin-tb" aria-labelledby="label_id_first">
             <a name="onglet-1" id="onglet-1"></a>
-            <h2 class="visually-hidden">1er onglet</h2>
+            <h2 class="visually-hidden" tabindex="-1">1er onglet</h2>
             {{ include.contenuOngletUn }}
             <p class="ds44-keyboard-show"><a href="#label_id_first">Revenir au premier onglet</a></p>
         </div>
         <div id="id_second" class="js-tabcontent ds44-tabs__content ds44-inner-container ds44-xl-margin-tb" aria-labelledby="label_id_second" aria-hidden="true">
             <a name="onglet-2" id="onglet-2"></a>
-            <h2 class="visually-hidden">2e onglet</h2>
+            <h2 class="visually-hidden" tabindex="-1">2e onglet</h2>
             {{ include.contenuOngletDeux }}
             <p class="ds44-keyboard-show"><a href="#label_id_second">Revenir au deuxième onglet</a></p>
         </div>
         <div id="id_third" class="js-tabcontent ds44-tabs__content ds44-inner-container ds44-xl-margin-tb" aria-labelledby="label_id_third" aria-hidden="true">
             <a name="onglet-3" id="onglet-3"></a>
-            <h2 class="visually-hidden">3e onglet</h2>
+            <h2 class="visually-hidden" tabindex="-1">3e onglet</h2>
             {{ include.contenuOngletTrois }}
             <p class="ds44-keyboard-show"><a href="#label_id_third">Revenir au troisième onglet</a></p>
         </div>
