--- a/docs/_includes/onglets/onglets-simples.html
+++ b/docs/_includes/onglets/onglets-simples.html
@@ -6,28 +6,28 @@
                     <a id="label_id_first" href="#id_first" class="js-tablist__link ds44-tabs__link" aria-current="true">{{ include.titleOngletUn }}</a>
                 </li>
                 <li class="ds44-tabs__item ds44-fg1" id="tabs__2">
-                    <a id="label_id_second" href="#id_second" class="js-tablist__link ds44-tabs__link">{{ include.titleOngletDeux }}</a>
+                    <a id="label_id_second" href="#id_second" class="js-tablist__link ds44-tabs__link" aria-disabled="true">{{ include.titleOngletDeux }}</a>
                 </li>
                 <li class="ds44-tabs__item ds44-fg1" id="tabs__3">
-                    <a id="label_id_third" href="#id_third" class="js-tablist__link ds44-tabs__link">{{ include.titleOngletTrois }}</a>
+                    <a id="label_id_third" href="#id_third" class="js-tablist__link ds44-tabs__link" aria-disabled="true">{{ include.titleOngletTrois }}</a>
                 </li>
             </ul>
         </nav>
         <div id="id_first" class="js-tabcontent ds44-tabs__content ds44-inner-container ds44-xl-margin-tb" style='display:none'>
             <a name="onglet-1" id="onglet-1"></a>
-            <h2 class="visually-hidden">1er onglet</h2>
+            <h2 class="visually-hidden" tabindex="-1">1er onglet</h2>
             {{ include.contenuOngletUn }}
             <p class="ds44-keyboard-show"><a href="#label_id_first">Revenir au premier onglet</a></p>
         </div>
         <div id="id_second" class="js-tabcontent ds44-tabs__content ds44-inner-container ds44-xl-margin-tb" style='display:none'>
             <a name="onglet-2" id="onglet-2"></a>
-            <h2 class="visually-hidden">2e onglet</h2>
+            <h2 class="visually-hidden" tabindex="-1">2e onglet</h2>
             {{ include.contenuOngletDeux }}
             <p class="ds44-keyboard-show"><a href="#label_id_second">Revenir au deuxième onglet</a></p>
         </div>
         <div id="id_third" class="js-tabcontent ds44-tabs__content ds44-inner-container ds44-xl-margin-tb" style='display:none'>
             <a name="onglet-3" id="onglet-3"></a>
-            <h2 class="visually-hidden">3e onglet</h2>
+            <h2 class="visually-hidden" tabindex="-1">3e onglet</h2>
             {{ include.contenuOngletTrois }}
             <p class="ds44-keyboard-show"><a href="#label_id_third">Revenir au troisième onglet</a></p>
         </div>
