--- a/docs/_includes/header/inc-header.html
+++ b/docs/_includes/header/inc-header.html
@@ -26,6 +26,7 @@
                     {% endif %}
                 </div>
                 <div class="ds44-colRight">
+                    {{ include.variante3 }}
                     {% if include.variante1 %}
                         {{ include.variante1 }}
                     {% else %}
