--- a/framework/scss/components/_templates.scss
+++ b/framework/scss/components/_templates.scss
@@ -169,7 +169,7 @@ main {
         justify-content: flex-start;
         position: relative;
         figure {
-          position: static;
+          position: initial;
         }
     }
 
