--- a/docs/_includes/FAQ/FAQ-contenu.html
+++ b/docs/_includes/FAQ/FAQ-contenu.html
@@ -3,9 +3,9 @@
         <p class="h4-like" aria-level="2" role="heading">Consultez les questions les plus fréquentes :</p>
         <ul class="ds44-collapser ds44-mb-std ">
             <li class="ds44-collapser_element">
-                <button type="button" class="ds44-collapser_button" role="heading" aria-level="3">Où trouver le dossier à remplir pour une demande d’APA à domicile ?<i class="icon icon-down" aria-hidden="true"></i>
-                </button>
-                <!-- Ce que Franck souhaite : <p role="heading" aria-level="3"><button type="button" class="ds44-collapser_button" aria-expanded="false">Où trouver le dossier à remplir pour une demande d’APA à domicile ?<i class="icon icon-down" aria-hidden="true"></i></button></p> -->
+                <p role="heading" aria-level="3">
+                  <button type="button" class="ds44-collapser_button">Où trouver le dossier à remplir pour une demande d’APA à domicile ?<i class="icon icon-down" aria-hidden="true"></i></button>
+                </p>
                 <div class="ds44-collapser_content">
                     <ul class="ds44-list ds44-collapser_content--level2">
                         <li>
@@ -15,8 +15,10 @@
                 </div>
             </li>
             <li class="ds44-collapser_element">
-                <button type="button" class="ds44-collapser_button" role="heading" aria-level="3">Où retirer le dossier de demande d’aide sociale pour un hébergement en maison de retraite ?<i class="icon icon-down" aria-hidden="true"></i>
-                </button>
+                <p role="heading" aria-level="3">
+                  <button type="button" class="ds44-collapser_button">Où retirer le dossier de demande d’aide sociale pour un hébergement en maison de retraite ?<i class="icon icon-down" aria-hidden="true"></i>
+                  </button>
+                </p>
                 <div class="ds44-collapser_content">
                     <ul class="ds44-list ds44-collapser_content--level2">
                         <li>
@@ -26,8 +28,10 @@
                 </div>
             </li>
             <li class="ds44-collapser_element">
-                <button type="button" class="ds44-collapser_button" role="heading" aria-level="3">Comment faire une demande d’admission en EHPAD ?<i class="icon icon-down" aria-hidden="true"></i>
-                </button>
+                <p role="heading" aria-level="3">
+                  <button type="button" class="ds44-collapser_button">Comment faire une demande d’admission en EHPAD ?<i class="icon icon-down" aria-hidden="true"></i>
+                  </button>
+                </p>
                 <div class="ds44-collapser_content">
                     <ul class="ds44-list ds44-collapser_content--level2">
                         <li>
@@ -37,8 +41,10 @@
                 </div>
             </li>
             <li class="ds44-collapser_element">
-                <button type="button" class="ds44-collapser_button" role="heading" aria-level="3">A qui dois-je m’adresser pour l’installation d’un système de téléassistance ?<i class="icon icon-down" aria-hidden="true"></i>
-                </button>
+                <p role="heading" aria-level="3">
+                  <button type="button" class="ds44-collapser_button">A qui dois-je m’adresser pour l’installation d’un système de téléassistance ?<i class="icon icon-down" aria-hidden="true"></i>
+                  </button>
+                </p>
                 <div class="ds44-collapser_content">
                     <ul class="ds44-list ds44-collapser_content--level2">
                         <li>
@@ -48,8 +54,10 @@
                 </div>
             </li>
             <li class="ds44-collapser_element">
-                <button type="button" class="ds44-collapser_button" role="heading" aria-level="3">Mon logement n’est plus adapté, à qui dois-je m’adresser ?<i class="icon icon-down" aria-hidden="true"></i>
-                </button>
+                <p role="heading" aria-level="3">
+                  <button type="button" class="ds44-collapser_button">Mon logement n’est plus adapté, à qui dois-je m’adresser ?<i class="icon icon-down" aria-hidden="true"></i>
+                  </button>
+                </p>
                 <div class="ds44-collapser_content">
                     <ul class="ds44-list ds44-collapser_content--level2">
                         <li>
@@ -60,8 +68,10 @@
             </li>
 
             <li class="ds44-collapser_element hidden">
-                <button type="button" class="ds44-collapser_button" role="heading" aria-level="3">Où trouver le dossier à remplir pour une demande d’APA à domicile ?<i class="icon icon-down" aria-hidden="true"></i>
-                </button>
+                <p role="heading" aria-level="3">
+                  <button type="button" class="ds44-collapser_button">Où trouver le dossier à remplir pour une demande d’APA à domicile ?<i class="icon icon-down" aria-hidden="true"></i>
+                  </button>
+                </p>
                 <div class="ds44-collapser_content">
                     <ul class="ds44-list ds44-collapser_content--level2">
                         <li>
@@ -71,8 +81,10 @@
                 </div>
             </li>
             <li class="ds44-collapser_element hidden">
-                <button type="button" class="ds44-collapser_button" role="heading" aria-level="3">Où retirer le dossier de demande d’aide sociale pour un hébergement en maison de retraite ?<i class="icon icon-down" aria-hidden="true"></i>
-                </button>
+                <p role="heading" aria-level="3">
+                  <button type="button" class="ds44-collapser_button">Où retirer le dossier de demande d’aide sociale pour un hébergement en maison de retraite ?<i class="icon icon-down" aria-hidden="true"></i>
+                  </button>
+                </p>
                 <div class="ds44-collapser_content">
                     <ul class="ds44-list ds44-collapser_content--level2">
                         <li>
@@ -82,8 +94,10 @@
                 </div>
             </li>
             <li class="ds44-collapser_element hidden">
-                <button type="button" class="ds44-collapser_button" role="heading" aria-level="3">Comment faire une demande d’admission en EHPAD ?<i class="icon icon-down" aria-hidden="true"></i>
-                </button>
+                <p role="heading" aria-level="3">
+                  <button type="button" class="ds44-collapser_button">Comment faire une demande d’admission en EHPAD ?<i class="icon icon-down" aria-hidden="true"></i>
+                  </button>
+                </p>
                 <div class="ds44-collapser_content">
                     <ul class="ds44-list ds44-collapser_content--level2">
                         <li>
@@ -93,8 +107,10 @@
                 </div>
             </li>
             <li class="ds44-collapser_element hidden">
-                <button type="button" class="ds44-collapser_button" role="heading" aria-level="3">A qui dois-je m’adresser pour l’installation d’un système de téléassistance ?<i class="icon icon-down" aria-hidden="true"></i>
-                </button>
+                <p role="heading" aria-level="3">
+                  <button type="button" class="ds44-collapser_button">A qui dois-je m’adresser pour l’installation d’un système de téléassistance ?<i class="icon icon-down" aria-hidden="true"></i>
+                  </button>
+                </p>
                 <div class="ds44-collapser_content">
                     <ul class="ds44-list ds44-collapser_content--level2">
                         <li>
@@ -104,8 +120,10 @@
                 </div>
             </li>
             <li class="ds44-collapser_element hidden">
-                <button type="button" class="ds44-collapser_button" role="heading" aria-level="3">Mon logement n’est plus adapté, à qui dois-je m’adresser ?<i class="icon icon-down" aria-hidden="true"></i>
-                </button>
+                <p role="heading" aria-level="3">
+                  <button type="button" class="ds44-collapser_button">Mon logement n’est plus adapté, à qui dois-je m’adresser ?<i class="icon icon-down" aria-hidden="true"></i>
+                  </button>
+                </p>
                 <div class="ds44-collapser_content">
                     <ul class="ds44-list ds44-collapser_content--level2">
                         <li>
@@ -115,8 +133,10 @@
                 </div>
             </li>
             <li class="ds44-collapser_element hidden">
-                <button type="button" class="ds44-collapser_button" role="heading" aria-level="3">Où trouver le dossier à remplir pour une demande d’APA à domicile ?<i class="icon icon-down" aria-hidden="true"></i>
-                </button>
+                <p role="heading" aria-level="3">
+                  <button type="button" class="ds44-collapser_button">Où trouver le dossier à remplir pour une demande d’APA à domicile ?<i class="icon icon-down" aria-hidden="true"></i>
+                  </button>
+                </p>
                 <div class="ds44-collapser_content">
                     <ul class="ds44-list ds44-collapser_content--level2">
                         <li>
@@ -126,8 +146,10 @@
                 </div>
             </li>
             <li class="ds44-collapser_element hidden">
-                <button type="button" class="ds44-collapser_button" role="heading" aria-level="3">Où retirer le dossier de demande d’aide sociale pour un hébergement en maison de retraite ?<i class="icon icon-down" aria-hidden="true"></i>
-                </button>
+                <p role="heading" aria-level="3">
+                  <button type="button" class="ds44-collapser_button">Où retirer le dossier de demande d’aide sociale pour un hébergement en maison de retraite ?<i class="icon icon-down" aria-hidden="true"></i>
+                  </button>
+                </p>
                 <div class="ds44-collapser_content">
                     <ul class="ds44-list ds44-collapser_content--level2">
                         <li>
@@ -137,8 +159,10 @@
                 </div>
             </li>
             <li class="ds44-collapser_element hidden">
-                <button type="button" class="ds44-collapser_button" role="heading" aria-level="3">Comment faire une demande d’admission en EHPAD ?<i class="icon icon-down" aria-hidden="true"></i>
-                </button>
+                <p role="heading" aria-level="3">
+                  <button type="button" class="ds44-collapser_button">Comment faire une demande d’admission en EHPAD ?<i class="icon icon-down" aria-hidden="true"></i>
+                  </button>
+                </p>
                 <div class="ds44-collapser_content">
                     <ul class="ds44-list ds44-collapser_content--level2">
                         <li>
@@ -148,8 +172,10 @@
                 </div>
             </li>
             <li class="ds44-collapser_element hidden">
-                <button type="button" class="ds44-collapser_button" role="heading" aria-level="3">A qui dois-je m’adresser pour l’installation d’un système de téléassistance ?<i class="icon icon-down" aria-hidden="true"></i>
-                </button>
+                <p role="heading" aria-level="3">
+                  <button type="button" class="ds44-collapser_button">A qui dois-je m’adresser pour l’installation d’un système de téléassistance ?<i class="icon icon-down" aria-hidden="true"></i>
+                  </button>
+                </p>
                 <div class="ds44-collapser_content">
                     <ul class="ds44-list ds44-collapser_content--level2">
                         <li>
