--- a/framework/scss/components/_collapser.scss
+++ b/framework/scss/components/_collapser.scss
@@ -18,6 +18,10 @@
     border-bottom: 1px solid $ds44-contextual-color;
     list-style: none; // if collapser is a list
 
+    > p[role="heading"] {
+      font-weight: normal;
+    }
+
     .ds44-collapser_content li {
       list-style: none;
       margin-top: 0;
