--- a/docs/_includes/form/layout/partial/recherche-facettes-main.html
+++ b/docs/_includes/form/layout/partial/recherche-facettes-main.html
@@ -5,6 +5,7 @@
 {% endif %}
 
 <div class="ds44-facetteContainer ds44-bgDark ds44-flex-container ds44-medium-flex-col">
+    {% if include.titleFacette %}<div><h3 class="ds44-facette__title">{{ include.titleFacette }}</h3></div>{% endif %}
     {{ include.fields }}
     <div class="ds44-fieldContainer ds44-small-fg1">
         <button class="ds44-btnStd ds44-theme {{ buttonClass }}" title="Lancer la recherche"><span class="ds44-btnInnerText">Rechercher</span><i class="icon icon-long-arrow-right" aria-hidden="true"></i></button>
