--- a/docs/_includes/footer/footer-archive.html
+++ b/docs/_includes/footer/footer-archive.html
@@ -8,10 +8,10 @@
             </div>
             <div class="col-4-small-1 ds44-mb3">
                 <h2 class="h4-like" id="idTitreFooter1" role="heading">Les Archives départementales</h2>
-                <p class="ds44-docListElem"><i class="icon icon-marker ds44-docListIco" aria-hidden="true"></i>6 rue de Bouillé<br />CS 23505, 44035 Nantes cedex 1</p>
-                <p class="ds44-docListElem mtm"><i class="icon icon-phone ds44-docListIco" aria-hidden="true"></i>02 51 72 93 20</p>
+                <p class="ds44-docListElem"><i class="icon icon-marker ds44-docListIco" aria-hidden="true"></i><span class="visually-hidden">Adresse : </span>6 rue de Bouillé<br />CS 23505, 44035 Nantes cedex 1</p>
+                <p class="ds44-docListElem mtm"><i class="icon icon-phone ds44-docListIco" aria-hidden="true"></i><span class="visually-hidden">Téléphone : </span>02 51 72 93 20</p>
                 <p class="ds44-docListElem mtm">
-                    <i class="icon icon-mail ds44-docListIco" aria-hidden="true"></i><a href="mailto:contact@loire-atlantique.fr" title="Contacter : les Archives départementales">Contacter par mail</a>
+                    <i class="icon icon-mail ds44-docListIco" aria-hidden="true"></i><a href="mailto:contact@loire-atlantique.fr" title="Contacter par mail : les Archives départementales">Contacter par mail</a>
                 </p>
                 <p class="ds44-docListElem mtm">
                     <i class="icon icon-directions ds44-docListIco" aria-hidden="true"></i><a href="#" title="Comment se rendre aux Archives départementales">Comment s'y rendre ?</a>
